--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toTopOf="parent"
             android:padding="8dp"/>
 
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:text="Rama"
             app:layout_constraintTop_toBottomOf="@+id/jornada_text_view"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="36dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:text="Hora"
             app:layout_constraintTop_toBottomOf="@+id/rama_text_view"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:text="Campo"
             app:layout_constraintTop_toBottomOf="@+id/hora_text_view"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
@@ -105,6 +105,60 @@
             app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"
     />
 
+    <EditText
+            android:id="@+id/Equipo1_edit_view"
+            android:layout_width="124dp"
+            android:layout_height="39dp"
+            android:inputType="textPersonName"
+            android:text="Equipo 1"
+            android:ems="10"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/campo_edit_view"
+            app:layout_constraintStart_toStartOf="@+id/jornada_text_view"
+    />
+
+    <EditText
+            android:id="@+id/Equipo2_edit_view"
+            android:layout_width="118dp"
+            android:layout_height="38dp"
+            android:inputType="textPersonName"
+            android:text="Equipo 2"
+            android:ems="10"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/campo_edit_view"
+            app:layout_constraintStart_toStartOf="@+id/jornada_text_view" android:layout_marginStart="220dp"
+            android:layout_marginLeft="220dp" app:layout_constraintBottom_toBottomOf="@+id/Equipo1_edit_view"
+            app:layout_constraintVertical_bias="0.0"/>
+    <View
+            android:id="@+id/divider2"
+            android:layout_width="395dp"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintVertical_bias="0.421"/>
+    <EditText
+            android:layout_width="35dp"
+            android:layout_height="32dp"
+            android:inputType="number"
+            android:ems="10"
+            android:id="@+id/editText"
+            app:layout_constraintStart_toStartOf="@+id/Equipo1_edit_view" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/Equipo1_edit_view" android:layout_marginRight="8dp"
+            android:layout_marginTop="68dp" app:layout_constraintTop_toBottomOf="@+id/Equipo1_edit_view"
+            app:layout_constraintHorizontal_bias="0.372"/>
+    <View
+            android:id="@+id/divider4"
+            android:layout_width="1dp"
+            android:layout_height="715dp"
+            android:background="?android:attr/listDivider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.49"
+            tools:layout_editor_absoluteY="313dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
