--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,8 +79,8 @@
             android:ems="10"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/rama_edit_text"
-            app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"
-    />
+            app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"/>
+
     <TextView
             android:id="@+id/campo_text_view"
             android:layout_width="wrap_content"
@@ -102,63 +102,60 @@
             android:ems="10"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/hora_edit_text"
-            app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"
-    />
+            app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"/>
+
+    <View
+            android:id="@+id/divider2"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/campo_text_view"/>
 
     <EditText
-            android:id="@+id/Equipo1_edit_view"
+            android:id="@+id/equipo1_edit_view"
             android:layout_width="124dp"
             android:layout_height="39dp"
             android:inputType="textPersonName"
             android:text="Equipo 1"
-            android:ems="10"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/campo_edit_view"
-            app:layout_constraintStart_toStartOf="@+id/jornada_text_view"
-    />
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/divider3"
+            app:layout_constraintEnd_toStartOf="@id/divider4"/>
 
     <EditText
-            android:id="@+id/Equipo2_edit_view"
-            android:layout_width="118dp"
-            android:layout_height="38dp"
+            android:id="@+id/equipo2_edit_view"
+            android:layout_width="124dp"
+            android:layout_height="39dp"
             android:inputType="textPersonName"
             android:text="Equipo 2"
-            android:ems="10"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/campo_edit_view"
-            app:layout_constraintStart_toStartOf="@+id/jornada_text_view" android:layout_marginStart="220dp"
-            android:layout_marginLeft="220dp" app:layout_constraintBottom_toBottomOf="@+id/Equipo1_edit_view"
-            app:layout_constraintVertical_bias="0.0"/>
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            app:layout_constraintBottom_toBottomOf="@id/divider3"
+            app:layout_constraintStart_toEndOf="@id/divider4"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
     <View
-            android:id="@+id/divider2"
-            android:layout_width="395dp"
+            android:id="@+id/divider3"
+            android:layout_width="0dp"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.421"/>
-    <EditText
-            android:layout_width="35dp"
-            android:layout_height="32dp"
-            android:inputType="number"
-            android:ems="10"
-            android:id="@+id/editText"
-            app:layout_constraintStart_toStartOf="@+id/Equipo1_edit_view" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@+id/Equipo1_edit_view" android:layout_marginRight="8dp"
-            android:layout_marginTop="68dp" app:layout_constraintTop_toBottomOf="@+id/Equipo1_edit_view"
-            app:layout_constraintHorizontal_bias="0.372"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/equipo1_edit_view"/>
+
+
     <View
             android:id="@+id/divider4"
             android:layout_width="1dp"
-            android:layout_height="715dp"
+            android:layout_height="0dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.49"
-            tools:layout_editor_absoluteY="313dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
