--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,25 +15,25 @@
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="100dp"
             app:layout_constraintTop_toTopOf="parent"
             android:padding="8dp"/>
 
     <EditText
             android:id="@+id/jornada_edit_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="213dp"
+            android:layout_height="25dp"
             android:inputType="textPersonName"
             android:text=""
             android:ems="10"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="108dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginRight="16dp"
             app:layout_constraintStart_toEndOf="@+id/jornada_text_view"
             android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.266"/>
 
     <TextView
             android:id="@+id/rama_text_view"
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:text="Rama"
             app:layout_constraintTop_toBottomOf="@+id/jornada_text_view"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
@@ -49,14 +49,15 @@
 
     <EditText
             android:id="@+id/rama_edit_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="25dp"
             android:inputType="textPersonName"
             android:text=""
             android:ems="10"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/jornada_edit_text"
             app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"
+
     />
     <TextView
             android:id="@+id/hora_text_view"
@@ -64,7 +65,7 @@
             android:layout_height="wrap_content"
             android:text="Hora"
             app:layout_constraintTop_toBottomOf="@+id/rama_text_view"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginLeft="32dp"
             android:layout_marginStart="32dp"
@@ -72,12 +73,12 @@
 
     <EditText
             android:id="@+id/hora_edit_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="25dp"
             android:inputType="textPersonName"
             android:text=""
             android:ems="10"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/rama_edit_text"
             app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"/>
 
@@ -89,64 +90,48 @@
             app:layout_constraintTop_toBottomOf="@+id/hora_text_view"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginStart="24dp"
             android:padding="8dp"/>
 
     <EditText
             android:id="@+id/campo_edit_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="25dp"
             android:inputType="textPersonName"
             android:text=""
             android:ems="10"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/hora_edit_text"
-            app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"/>
-
-    <View
-            android:id="@+id/divider2"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/campo_text_view"/>
+            app:layout_constraintStart_toStartOf="@+id/jornada_edit_text"
+    />
 
     <EditText
             android:id="@+id/equipo1_edit_view"
-            android:layout_width="124dp"
-            android:layout_height="39dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:text="Equipo 1"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/divider3"
-            app:layout_constraintEnd_toStartOf="@id/divider4"/>
+            app:layout_constraintEnd_toStartOf="@id/divider4"
+            app:layout_constraintHorizontal_bias="0.567"
+            app:layout_constraintTop_totopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/total1"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+    />
 
     <EditText
             android:id="@+id/equipo2_edit_view"
-            android:layout_width="124dp"
-            android:layout_height="39dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:inputType="textPersonName"
             android:text="Equipo 2"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
-            app:layout_constraintBottom_toBottomOf="@id/divider3"
             app:layout_constraintStart_toEndOf="@id/divider4"
-            app:layout_constraintEnd_toEndOf="parent"/>
-
-    <View
-            android:id="@+id/divider3"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/equipo1_edit_view"/>
-
-
+            tools:layout_editor_absoluteY="40dp"
+            app:layout_constraintHorizontal_bias="0.506"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
+    />
     <View
             android:id="@+id/divider4"
             android:layout_width="1dp"
@@ -154,8 +139,41 @@
             android:background="?android:attr/listDivider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider2"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toTopOf="@id/jornada_edit_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+    />
+    <TextView
+            android:id="@+id/total1"
+            android:text="total1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/equipo1_edit_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/divider4"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="12dp"
+            app:layout_constraintHorizontal_bias="0.587"
+    />
+    <TextView
+            android:id="@+id/total2"
+            android:text="total2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/equipo2_edit_view"
+            app:layout_constraintStart_toEndOf="@id/divider4"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="12dp"
+            app:layout_constraintHorizontal_bias="0.493"
+    />
+    <Button
+            android:id="@+id/button_event"
+            android:text="add_event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/campo_edit_view"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
